--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "crypto": "^1.0.1",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "multer": "^2.0.2",
