--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ MYSQL_URL="mysql://${{MYSQLUSER}}:${{MYSQL_ROOT_PASSWORD}}@${{RAILWAY_PRIVATE_DO
 MYSQLDATABASE="${{MYSQL_DATABASE}}"
 MYSQLHOST="${{RAILWAY_PRIVATE_DOMAIN}}"
 MYSQLPASSWORD="${{MYSQL_ROOT_PASSWORD}}"
-MYSQLPORT="3306"
+MYSQLPORT=3306
 MYSQLUSER="root"
 MYHOST = "switchback.proxy.rlwy.net"
